# rubek.dev

./: CHANGELOG.md  bomp.ron  bomp.toml  cog.toml  default.nix  flake.nix
.github/workflows/: tag.yaml
astro/: .env.development  .npmrc  README.md  astro.config.mjs  default.nix  package-lock.json  package.json  tailwind.config.cjs  tailwind.theme.config.js
astro/public/: search-index.json
astro/public/admin/: index.html
astro/src/: config.ts
astro/src/components/: BaseHead.astro  BaseLayout.astro  Footer.astro  Header.astro  Nav.astro  PagePreview.astro  PostPreview.astro  PostPreviewList.astro  PreviewList.astro  Scheduler.svelte  Search.svelte
astro/src/components/scheduling/: Scheduler.svelte  Timecard.svelte  Timepicker.svelte  api.ts  store.ts  types.ts  util.ts
astro/src/layouts/: page.astro  post-draft.astro  post.astro
astro/src/pages/: about.mdx  contact-info.mdx  contact.astro  contact.mdx  hello.md  index.astro  rss.xml.js
astro/src/pages/docs/: [...page].astro  git-info.mdx  rust.mdx
astro/src/pages/drafts/: [...page].astro
astro/src/pages/drafts/[slug]/: index.astro
astro/src/pages/posts/: 2023-01-01-hello-world.md  2023-01-01-hello-world.mdx  2023-01-24-garnix.mdx  2024-05-18-nix-fileset.mdx  [...page].astro
astro/src/pages/tags/: index.astro
astro/src/pages/tags/[tag]/: [page].astro  index.astro
astro/src/plugins/: codeblock.mjs
astro/src/styles/: code.css  global.css
crates/api/: Cargo.toml
crates/api/src/: main.rs
crates/cli/: Cargo.toml
crates/cli/src/: main.rs
