[package]
name = "api"
version = "0.3.0"
edition = "2021"

[dependencies]
axum = "0.6.1"
scheduling-api = "0.7.0"
caldav-utils = "0.7.0"
# clap = { version = "4.0.19", features = ["derive"] }
reqwest = { version = "0.11.12", features = ["rustls-tls"], default-features = false }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
tower = { version = "0.4", features = ["util"] }
tower-http = { version = "0.3.0", features = ["fs", "cors"] }
tracing = "0.1.37"
tracing-subscriber = "0.3.16"
