[package]
name = "api"
edition = "2021"
version = "0.4.1"

[dependencies]
axum = "0.6.1"
caldav-utils = "0.7.1"
scheduling-api = "0.7.1"
serde_json = "1"
tracing = "0.1.37"
tracing-subscriber = "0.3.16"

[dependencies.reqwest]
version = "0.11.12"
features = ["rustls-tls"]
default-features = false

[dependencies.serde]
version = "1"
features = ["derive"]

[dependencies.tokio]
version = "1"
features = ["full"]

[dependencies.tower]
version = "0.4"
features = ["util"]

[dependencies.tower-http]
version = "0.3.0"
features = ["fs", "cors"]
